# odnnr

./: README.md  TODO  commands.sh  odnnr.opam  test.r
data/: xp_network_archi_chembl1868_pFP.txt
files/: install_keras.r
src/: DNNR.ml  ODNNR.ml  model.ml  utls.ml
