opam-version: "2.0"
maintainer: "unixjunkie@sdf.org"
authors: ["Francois Berenger"]
homepage: "https://github.com/UnixJunkie/odnnr"
bug-reports: "https://github.com/UnixJunkie/odnnr/issues"
dev-repo: "git+https://github.com/UnixJunkie/odnnr.git"
license: "LGPL-2.1-only with OCaml-LGPL-linking-exception"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"
  "conf-r"
  "dune" {>= "1.0.0"}
  "dolog" {>= "4.0.0"}
  "batteries"
  "minicli" {>= "5.0.0"}
  "parany" {>= "11.0.0"}
  "cpm"
  "conf-gnuplot"
]
synopsis: "Regressor using a Deep Neural Network"
description: """
Some OCaml functions to drive the Deep Learning R 'keras' package;
but only for training a regressor using a multi-layer perceptron.
This package really fires up and talks to an R interpreter.

Bibliography:
=============
Deep Learning with R. François Chollet with J. J. Allaire.
January 2018, ISBN 9781617295546.
"""
# url {
#   src: "https://github.com/UnixJunkie/odnnr/archive/XXX"
#   checksum: "md5=YYY"
# }
